crates/djls-project/tests/snapshots/corpus__repos__simonwillison.net__blog__templatetags__blog_calendar.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "tag::render_calendar":
    kind: tag
    has_doc: false
  "tag::render_calendar_month_only":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "blog.templatetags.blog_calendar::tag::render_calendar":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: date
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "blog.templatetags.blog_calendar::tag::render_calendar_month_only":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: date
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities: {}
block_specs: {}
