crates/djls-project/tests/snapshots/corpus__repos__simonwillison.net__blog__templatetags__blog_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::markdownify":
    kind: filter
    has_doc: false
  "tag::add_qsarg":
    kind: tag
    has_doc: false
  "tag::blog_mixed_list":
    kind: tag
    has_doc: false
  "tag::blog_mixed_list_with_dates":
    kind: tag
    has_doc: false
  "tag::comments_list":
    kind: tag
    has_doc: false
  "tag::comments_list_with_headers":
    kind: tag
    has_doc: false
  "tag::page_href":
    kind: tag
    has_doc: false
  "tag::remove_id_filters":
    kind: tag
    has_doc: false
  "tag::remove_qsarg":
    kind: tag
    has_doc: false
  "tag::replace_qsarg":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "blog.templatetags.blog_tags::tag::add_qsarg":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: name
            requirement: required
            kind: Variable
          - name: value
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "blog.templatetags.blog_tags::tag::blog_mixed_list":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: items
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "blog.templatetags.blog_tags::tag::blog_mixed_list_with_dates":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: items
            requirement: required
            kind: Variable
          - name: year_headers
            requirement: optional
            kind: Variable
          - name: day_headers
            requirement: optional
            kind: Variable
          - name: day_links
            requirement: optional
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "blog.templatetags.blog_tags::tag::comments_list":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: comments
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "blog.templatetags.blog_tags::tag::comments_list_with_headers":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: comments
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "blog.templatetags.blog_tags::tag::page_href":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: page
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "blog.templatetags.blog_tags::tag::remove_id_filters":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "blog.templatetags.blog_tags::tag::remove_qsarg":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: name
            requirement: required
            kind: Variable
          - name: value
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
  "blog.templatetags.blog_tags::tag::replace_qsarg":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: name
            requirement: required
            kind: Variable
          - name: value
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: strip
filter_arities:
  "blog.templatetags.blog_tags::filter::markdownify": no_argument
block_specs: {}
