crates/djls-project/tests/snapshots/corpus__repos__simonwillison.net__blog__templatetags__entry_tags.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "filter::break_up_long_words":
    kind: filter
    has_doc: false
  "filter::ends_with_punctuation":
    kind: filter
    has_doc: false
  "filter::first_paragraph":
    kind: filter
    has_doc: false
  "filter::openid_to_url":
    kind: filter
    has_doc: false
  "filter::remove_context_paragraph":
    kind: filter
    has_doc: false
  "filter::resize_images_to_fit_width":
    kind: filter
    has_doc: false
  "filter::split_cutoff":
    kind: filter
    has_doc: false
  "filter::strip_p_ids":
    kind: filter
    has_doc: false
  "filter::strip_wrapping_p":
    kind: filter
    has_doc: false
  "filter::text_ago":
    kind: filter
    has_doc: false
  "filter::typography":
    kind: filter
    has_doc: false
  "filter::xhtml":
    kind: filter
    has_doc: false
  "filter::xhtml2html":
    kind: filter
    has_doc: false
  "tag::entry_footer":
    kind: tag
    has_doc: false
  "tag::entry_footer_no_date":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "blog.templatetags.entry_tags::tag::entry_footer":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: entry
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "blog.templatetags.entry_tags::tag::entry_footer_no_date":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: entry
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities:
  "blog.templatetags.entry_tags::filter::break_up_long_words": required_argument
  "blog.templatetags.entry_tags::filter::ends_with_punctuation": no_argument
  "blog.templatetags.entry_tags::filter::first_paragraph": no_argument
  "blog.templatetags.entry_tags::filter::openid_to_url": no_argument
  "blog.templatetags.entry_tags::filter::remove_context_paragraph": no_argument
  "blog.templatetags.entry_tags::filter::resize_images_to_fit_width": required_argument
  "blog.templatetags.entry_tags::filter::split_cutoff": no_argument
  "blog.templatetags.entry_tags::filter::strip_p_ids": no_argument
  "blog.templatetags.entry_tags::filter::strip_wrapping_p": no_argument
  "blog.templatetags.entry_tags::filter::text_ago": no_argument
  "blog.templatetags.entry_tags::filter::typography": no_argument
  "blog.templatetags.entry_tags::filter::xhtml": no_argument
  "blog.templatetags.entry_tags::filter::xhtml2html": no_argument
block_specs: {}
