crates/djls-project/tests/snapshots/corpus__repos__simonwillison.net__blog__templatetags__tag_cloud.py.snap
---
source: crates/djls-project/tests/corpus.rs
expression: "sorted_snapshot(&bundle).expect(\"corpus extraction snapshot should serialize\")"
---
definitions:
  "tag::tag_cloud":
    kind: tag
    has_doc: false
  "tag::tag_cloud_for_tags":
    kind: tag
    has_doc: false
symbols_are_unobserved: false
tag_rules:
  "blog.templatetags.tag_cloud::tag::tag_cloud":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters: []
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
  "blog.templatetags.tag_cloud::tag::tag_cloud_for_tags":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    argument_syntax:
      Signature:
        parameters:
          - name: tags
            requirement: required
            kind: Variable
        positional_only: 0
        variadic_keyword: ~
    as_var: keep
filter_arities: {}
block_specs: {}
